Added soft link: index.md -> Readme.md.

--- a/README.html
+++ b/README.html
@@ -11,16 +11,17 @@
   <body>
     <article class="markdown-body"><h1 id="fisher's-personal-blog"><a class="header-link" href="#fisher's-personal-blog"></a>Fisher&#39;s Personal Blog</h1>
 <!-- > Created by Fisher at 02:53 on 2017-01-11. -->
-<h2 id="blog-structure"><a class="header-link" href="#blog-structure"></a>Blog Structure</h2>
+<h2 id="blogs-list"><a class="header-link" href="#blogs-list"></a>Blogs List</h2>
 <ul class="list">
-<li>Blog List<ul class="list">
-<li>/blogs</li>
-<li>/get-stareted (Introduction for newbies)</li>
-<li>/how-to (Guidance and Tips based on topics)</li>
-<li>/ideas</li>
-<li>/journals</li>
-<li>/opinions</li>
-<li>/todoornot (Shitty ideas)</li>
+<li><a href="/#">How To</a> (Guidance and Tips based on topics)<ul class="list">
+<li><a href="/how-to/make-plans.html">How to Make Plans</a></li>
+</ul>
+</li>
+<li><a href="/#">Journals</a></li>
+<li><a href="/#">Opinions</a></li>
+<li><a href="/#">To Do or Not</a> (Shitty ideas)</li>
+<li><a href="/#">Get Started</a> (Introduction for newbies)<ul class="list">
+<li><a href="/get-started/tools/webstorm.html">Using Webstorm</a></li>
 </ul>
 </li>
 </ul>
