--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
   </head>
   <body>
     <article class="markdown-body"><h1 id="fisher's-personal-blog"><a class="header-link" href="#fisher's-personal-blog"></a>Fisher&#39;s Personal Blog</h1>
+<!-- > Created by Fisher at 02:53 on 2017-01-11. -->
+<h2 id="blogs-list"><a class="header-link" href="#blogs-list"></a>Blogs List</h2>
 <ul class="list">
-<li>How To:<ul class="list">
+<li><a href="/#">How To</a> (Guidance and Tips based on topics)<ul class="list">
 <li><a href="/how-to/make-plans.html">How to Make Plans</a></li>
 </ul>
 </li>
-<li>Get Started<ul class="list">
+<li><a href="/#">Journals</a></li>
+<li><a href="/#">Opinions</a></li>
+<li><a href="/#">To Do or Not</a> (Shitty ideas)</li>
+<li><a href="/#">Get Started</a> (Introduction for newbies)<ul class="list">
 <li><a href="/get-started/tools/webstorm.html">Using Webstorm</a></li>
 </ul>
 </li>
