--- a/README.html
+++ b/README.html
@@ -17,11 +17,17 @@
 <li><a href="/how-to/make-plans.html">How to Make Plans</a></li>
 </ul>
 </li>
-<li><a href="/#">Journals</a></li>
+<li><a href="/#">Journals</a><ul class="list">
+<li><a href="/journals/learning-tree.html">My Learning Tree</a></li>
+</ul>
+</li>
 <li><a href="/#">Opinions</a></li>
 <li><a href="/#">To Do or Not</a> (Shitty ideas)</li>
 <li><a href="/#">Get Started</a> (Introduction for newbies)<ul class="list">
+<li><a href="/#">Tools</a> (Introduction of Tools)<ul class="list">
 <li><a href="/get-started/tools/webstorm.html">Using Webstorm</a></li>
+</ul>
+</li>
 </ul>
 </li>
 </ul>
