Added my/movies-list; Added my/books-list.

--- a/my/learning-tree.html
+++ b/my/learning-tree.html
@@ -140,9 +140,20 @@
 <li>Unified Modeling Language(UML)</li>
 </ul>
 </li>
+<li>Programming News<ul class="list">
+<li><a href="https://techcrunch.com/" title="Website: TechCrunch">TechCrunch</a></li>
+</ul>
+</li>
 <li>Platforms<ul class="list">
 <li>Android<ul class="list">
+<li>Architecture<ul class="list">
+<li>MVC/MVVM/MVP</li>
+</ul>
+</li>
+<li>Libraries<ul class="list">
 <li>Retrofit</li>
+</ul>
+</li>
 </ul>
 </li>
 <li>Browser</li>
@@ -152,6 +163,7 @@
 <li><a href="https://www.xamarin.com/" title="Website: Xamarin"><del>Xamarin</del></a></li>
 </ul>
 </li>
+<li>Linux</li>
 <li>Windows<ul class="list">
 <li><a href="https://en.wikipedia.org/wiki/Windows_Presentation_Foundation" title="Wiki: Windows Presentation Foundation">WPF</a></li>
 <li>Windows Forms</li>
@@ -197,7 +209,7 @@
 </li>
 </ul>
 </li>
-<li>Softwares<ul class="list">
+<li>Systems and Softwares<ul class="list">
 <li>Database<ul class="list">
 <li>Redis</li>
 <li>MongoDB</li>
@@ -207,7 +219,10 @@
 <li><del>SQL Server</del></li>
 </ul>
 </li>
-<li><a href="https://www.docker.com/" title="Website: Docker">Docker</a></li>
+<li>File System<ul class="list">
+<li><a href="https://owncloud.org/" title="Website: OwnCloud">OwnCloud</a></li>
+</ul>
+</li>
 <li>Linux Terminal Simulator for Windows<ul class="list">
 <li>Git Bash</li>
 <li><a href="https://www.cygwin.com/" title="Website: Cygwin">Cygwin</a></li>
@@ -218,13 +233,6 @@
 <li>SwitchyOmega</li>
 </ul>
 </li>
-<li>Systems<ul class="list">
-<li>Android</li>
-<li>iOS</li>
-<li>Linux</li>
-<li><del>Windows</del></li>
-</ul>
-</li>
 <li>Text Editor<ul class="list">
 <li><a href="https://atom.io/" title="Website: Atom">Atom</a></li>
 <li>Notepad++</li>
@@ -232,9 +240,19 @@
 <li>Vim</li>
 </ul>
 </li>
+<li>Virtualization<ul class="list">
+<li><a href="https://www.docker.com/" title="Website: Docker">Docker</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Xen" title="Wiki: Xen Project">Xen Server/Project</a></li>
+</ul>
+</li>
 <li>Web Server<ul class="list">
 <li><del>Apache</del></li>
 <li>Nginx</li>
+</ul>
+</li>
+<li>Services Provider<ul class="list">
+<li><a href="https://aws.amazon.com/" title="Website: Amazon Web Services">AWS</a></li>
+<li>Aliyun</li>
 </ul>
 </li>
 </ul>
@@ -315,6 +333,7 @@
 <li><a href="https://en.wikipedia.org/wiki/Regulated_power_supply" title="Wiki: Regulated Power Supply">Wiki: Regulated Power Supply</a></li>
 <li><a href="https://en.wikipedia.org/wiki/File_Transfer_Protocol" title="Wiki: File transfer Protocol">Wiki: File transfer Protocol</a></li>
 <li><a href="https://en.wikipedia.org/wiki/Windows_Presentation_Foundation" title="Wiki: Windows Presentation Foundation">Wiki: Windows Presentation Foundation</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Xen" title="Wiki: Xen Project">Wiki: Xen Project</a></li>
 <li><a href="http://stackoverflow.com/" title="Website: Stack Overflow">Website: Stack Overflow</a></li>
 <li><a href="https://www.google.com/" title="Website: Google">Website: Google</a></li>
 <li><a href="https://github.com/vhf/free-programming-books" title="Github: Free Programming Books">Github: Free Programming Books</a></li>
@@ -327,6 +346,9 @@
 <li><a href="https://www.docker.com/" title="Website: Docker">Website: Docker</a></li>
 <li><a href="http://hadoop.apache.org/" title="Website: Apache">Apache: Apache</a></li>
 <li><a href="https://cordova.apache.org/" title="Website: Cordova">Apache: Cordova</a>: <a href="https://cordova.apache.org/">https://cordova.apache.org/</a></li>
+<li><a href="https://aws.amazon.com/" title="Website: Amazon Web Services">Website: Amazon Web Services</a></li>
+<li><a href="https://owncloud.org/" title="Website: OwnCloud">Website: OwnCloud</a></li>
+<li><a href="https://techcrunch.com/" title="Website: TechCrunch">Website: TechCrunch</a></li>
 </ol>
 <hr>
 <p>This document will be updated as time passes.</p>
