--- a/README.html
+++ b/README.html
@@ -13,16 +13,6 @@
 <!-- > Created by Fisher at 02:53 on 2017-01-11. -->
 <h2 id="blogs-list"><a class="header-link" href="#blogs-list"></a>Blogs List</h2>
 <ul class="list">
-<li><a href="/#">How To</a> (Guidance and Tips based on topics)<ul class="list">
-<li><a href="/how-to/make-plans.html">How to Make Plans</a></li>
-</ul>
-</li>
-<li><a href="/#">Journals</a><ul class="list">
-<li><a href="/journals/learning-tree.html">My Learning Tree</a></li>
-</ul>
-</li>
-<li><a href="/#">Opinions</a></li>
-<li><a href="/#">To Do or Not</a> (Shitty ideas)</li>
 <li><a href="/#">Get Started</a> (Introduction for newbies)<ul class="list">
 <li><a href="/#">Tools</a> (Introduction of Tools)<ul class="list">
 <li><a href="/get-started/tools/webstorm.html">Using Webstorm</a></li>
@@ -30,6 +20,19 @@
 </li>
 </ul>
 </li>
+<li><a href="/#">How To</a> (Guidance and Tips based on topics)<ul class="list">
+<li><a href="how-to/make-plans.html">How to Make Plans</a></li>
+</ul>
+</li>
+<li><a href="/#">Journals</a></li>
+<li>[My][/#]<ul class="list">
+<li><a href="journals/learning-tree.html">My Learning Tree</a></li>
+<li>[My Books List][my/books-list.html]</li>
+<li>[My Movies List][my/movies-list.html]</li>
+</ul>
+</li>
+<li><a href="/#">Opinions</a></li>
+<li><a href="/#">To Do or Not</a> (Shitty ideas)</li>
 </ul>
     </article>
   </body>
