Updated homepage index.

--- a/README.html
+++ b/README.html
@@ -25,10 +25,10 @@
 </ul>
 </li>
 <li><a href="/#">Journals</a></li>
-<li>[My][/#]<ul class="list">
+<li><a href="/#">My</a><ul class="list">
 <li><a href="journals/learning-tree.html">My Learning Tree</a></li>
-<li>[My Books List][my/books-list.html]</li>
-<li>[My Movies List][my/movies-list.html]</li>
+<li><a href="my/books-list.html">My Books List</a></li>
+<li><a href="my/movies-list.html">My Movies List</a></li>
 </ul>
 </li>
 <li><a href="/#">Opinions</a></li>
