--- a/my/learning-tree.html
+++ b/my/learning-tree.html
@@ -273,15 +273,19 @@
 </ul>
 <h2 id="hardware"><a class="header-link" href="#hardware"></a>Hardware</h2>
 <ul class="list">
-<li>Arduino</li>
 <li>3D Printing</li>
-<li>Robot</li>
-<li>Single Ship Computer</li>
-<li>Projects<ul class="list">
-<li><a href="https://en.wikipedia.org/wiki/Regulated_power_supply" title="Wiki: Regulated Power Supply">Regulated Power Supply</a></li>
+<li>Arduino</li>
 <li>Intelligent Car</li>
+<li><a href="https://en.wikipedia.org/wiki/Model_aircraft" title="Wiki: Model Aircraft">Model Aircraft</a><ul class="list">
+<li>Battery</li>
+<li>Motor</li>
+<li>Remote Control</li>
+<li><a href="https://en.wikipedia.org/wiki/Aerial_photography" title="Wiki: Aerial Photography">Aerial Photography</a></li>
 </ul>
 </li>
+<li><a href="https://en.wikipedia.org/wiki/Regulated_power_supply" title="Wiki: Regulated Power Supply">Regulated Power Supply</a></li>
+<li>Robots</li>
+<li>Single Ship Computer</li>
 </ul>
 <h2 id="art-and-literature"><a class="header-link" href="#art-and-literature"></a>Art and Literature</h2>
 <ul class="list">
@@ -317,10 +321,14 @@
 <li>French</li>
 <li>Japanese</li>
 </ul>
-<h2 id="skills"><a class="header-link" href="#skills"></a>Skills</h2>
+<h2 id="skills-or-hobbies"><a class="header-link" href="#skills-or-hobbies"></a>Skills or Hobbies</h2>
+<p>There are Skills or Hobbies that you can practice for pleasure.</p>
 <ul class="list">
 <li>Basketball</li>
+<li>Doing Exercise</li>
+<li>Driving</li>
 <li>Football</li>
+<li>Handwriting</li>
 <li>Singing</li>
 <li>Swimming</li>
 <li>Table Tennis</li>
@@ -334,6 +342,8 @@
 <li><a href="https://en.wikipedia.org/wiki/File_Transfer_Protocol" title="Wiki: File transfer Protocol">Wiki: File transfer Protocol</a></li>
 <li><a href="https://en.wikipedia.org/wiki/Windows_Presentation_Foundation" title="Wiki: Windows Presentation Foundation">Wiki: Windows Presentation Foundation</a></li>
 <li><a href="https://en.wikipedia.org/wiki/Xen" title="Wiki: Xen Project">Wiki: Xen Project</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Model_aircraft" title="Wiki: Model Aircraft">Wiki: Model Aircraft</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Aerial_photography" title="Wiki: Aerial Photography">Wiki: Aerial Photography</a></li>
 <li><a href="http://stackoverflow.com/" title="Website: Stack Overflow">Website: Stack Overflow</a></li>
 <li><a href="https://www.google.com/" title="Website: Google">Website: Google</a></li>
 <li><a href="https://github.com/vhf/free-programming-books" title="Github: Free Programming Books">Github: Free Programming Books</a></li>
