--- a/README.html
+++ b/README.html
@@ -26,7 +26,7 @@
 </li>
 <li><a href="/#">Journals</a></li>
 <li><a href="/#">My</a><ul class="list">
-<li><a href="journals/learning-tree.html">My Learning Tree</a></li>
+<li><a href="my/learning-tree.html">My Learning Tree</a></li>
 <li><a href="my/books-list.html">My Books List</a></li>
 <li><a href="my/movies-list.html">My Movies List</a></li>
 </ul>
