Added get-started/linux/setup-server module.

--- a/get-started/tools/webstorm.html
+++ b/get-started/tools/webstorm.html
@@ -3,31 +3,70 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-    <title>Get Started With JetBrains/[WebStorm][website-webstorm]</title>
+    <title>Get Started With [JetBrains/WebStorm][website-webstorm]</title>
     <link type="text/css" rel="stylesheet" href="../../assets/css/github-markdown.css">
     <link type="text/css" rel="stylesheet" href="../../assets/css/pilcrow.css">
     <link type="text/css" rel="stylesheet" href="../../assets/css/hljs-github.min.css"/>
   </head>
   <body>
-    <article class="markdown-body"><h1 id="get-started-with-jetbrains/[webstorm][website-webstorm]"><a class="header-link" href="#get-started-with-jetbrains/[webstorm][website-webstorm]"></a>Get Started With JetBrains/<a href="https://www.jetbrains.com/webstorm/" title="Website: WebStorm">WebStorm</a></h1>
+    <article class="markdown-body"><h1 id="get-started-with-[jetbrains/webstorm][website-webstorm]"><a class="header-link" href="#get-started-with-[jetbrains/webstorm][website-webstorm]"></a>Get Started With <a href="https://www.jetbrains.com/webstorm/" title="Website: WebStorm">JetBrains/WebStorm</a></h1>
 <blockquote>
 <p>Created by Fisher at 23:02 on 2017-01-06.</p>
 </blockquote>
 <p>WebStorm is a great tool to use if you are a JavaScript coder or just a HTML learner.</p>
-<p>WebStorm is a</p>
 <blockquote>
 <p>Lightweight yet powerful IDE, perfectly equipped for complex client-side development and server-side development with Node.js</p>
 </blockquote>
 <p>It is necessary to customize your IDE with your favors to make it more efficient and hence you will be more productive.
 Take a time and try following plugins and make your coding life better.</p>
+<h2 id="settings-(__file__-->-__setting__)"><a class="header-link" href="#settings-(__file__-->-__setting__)"></a>Settings (<strong>File</strong> -&gt; <strong>Setting</strong>)</h2>
 <ul class="list">
+<li>Appearance and Behavior<ul class="list">
+<li>Appearance<ul class="list">
+<li>IDE Theme<ul class="list">
+<li>&#39;Darcula&#39; makes it feel better.</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>Keymap<ul class="list">
+<li>&#39;Default for KDE&#39; Keymap based on KDE system</li>
+</ul>
+</li>
+<li>Editor<ul class="list">
+<li>Colors and Fonts<ul class="list">
+<li>&#39;Darcula&#39;</li>
+</ul>
+</li>
+<li>Code Style<ul class="list">
+<li>JavaScript<ul class="list">
+<li>Tabs and Indents<ul class="list">
+<li>[x] Use Tab Character</li>
+<li>[x] Smart Tabs</li>
+</ul>
+</li>
+<li>Wrapping and Braces<ul class="list">
+<li>Keep When Reformatting<ul class="list">
+<li>[x] Simple Blocks in One Line</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
 <li>Plugins<ul class="list">
 <li><a href="https://github.com/JetBrains/ideavim" title="Vim emulation">IdeaVim</a>: Vim emulation.</li>
 <li><a href="https://github.com/vsch/idea-multimarkdown" title="Markdown support">Markdown Support</a></li>
 <li><a href="https://github.com/jansorg/BashSupport" title="Bash Support">Bash Support</a></li>
 </ul>
 </li>
-<li>Settings (<strong>File</strong> -&gt; <strong>Setting</strong>)<ul class="list">
+<li>Languages and Frameworks<ul class="list">
 <li>Node.js and NPM<ul class="list">
 <li>Enable node.js option if you are writing node.js codes.</li>
 </ul>
