--- a/how-to/make-plans.html
+++ b/how-to/make-plans.html
@@ -14,12 +14,19 @@
 <p>Often we need make plans to learn subjects in school, to learn some skills, to try new things, or simply take a trip, or set up new projects. Here are some tips for you if you have troubles making plans. You can also use it as a reference when making plans for some purposes.</p>
 <h2 id="categories"><a class="header-link" href="#categories"></a>Categories</h2>
 <ul class="list">
+<li>By Time<ul class="list">
 <li>Daily Plans(To-Do List)</li>
 <li>Weekly Plans</li>
 <li>Monthly Plans</li>
 <li>Yearly Plans</li>
 <li>Periodical Plans</li>
 <li>Life-long Plans</li>
+</ul>
+</li>
+<li>By <a href="https://en.wikipedia.org/wiki/Getting_Things_Done" title="Wiki: Getting Things Done">Getting Things Done</a><ul class="list">
+<li>Urgent and Important</li>
+</ul>
+</li>
 </ul>
 <h2 id="tips"><a class="header-link" href="#tips"></a>Tips</h2>
 <p>Plans consist of things that we have to do, we want to do, we desire to do, etc and you may be puzzled when making a big plan such as your yearly plan. Here are some tips that may hint you a bit to make your plans.</p>
@@ -84,6 +91,7 @@
 <li>&quot;<a href="http://www.wikihow.com/Form-a-Plan#Creating_a_Life_Plan_sub" title="Form a Plan: Create a Life Plan">Form a Plan: Create a Life Plan</a>&quot;. WikiHow.</li>
 <li>&quot;<a href="http://www.wikihow.com/Create-an-Effective-Action-Plan" title="Create an Effective Action Plan">Create an Effective Action Plan</a>&quot;. WikiHow</li>
 <li>&quot;<a href="http://www.lifehack.org/296142/18-things-college-students-should-before-graduation" title="18 Things College Students Should Do Before Graduation">18 Things College Students Should Do Before Graduation</a>&quot;. Lifehack.</li>
+<li><a href="https://en.wikipedia.org/wiki/Getting_Things_Done" title="Wiki: Getting Things Done">Wiki: Getting Things Done</a>. Wiki.</li>
 </ul>
     </article>
   </body>
