--- a/get-started/linux/setup-server.html
+++ b/get-started/linux/setup-server.html
@@ -22,7 +22,7 @@ Run the following scripts to update server.</p>
 <h2 id="install-basic-programs."><a class="header-link" href="#install-basic-programs."></a>Install basic programs.</h2>
 <p>Some basic programs are useful, but it is up to you whether to install it or not.</p>
 <ol class="list">
-<li>Install <code>git</code><ul class="list">
+<li><code>git</code>: a version control system (VCS).<ul class="list">
 <li>$ <code>sudo apt install git</code></li>
 </ul>
 </li>
@@ -43,7 +43,7 @@ Run the following scripts to update server.</p>
 <li>$ <code>screen -S session-name</code></li>
 </ul>
 </li>
-<li>nodejs: to run NodeJs scripts.<ol class="list">
+<li><a href="https://nodejs.org/en/" title="Website: Node.Js">nodejs</a>: to run NodeJs scripts.<ol class="list">
 <li>Install from apt<ol class="list">
 <li>nodejs<ul class="list">
 <li>$ <code>sudo apt-get install nodejs</code></li>
@@ -105,6 +105,14 @@ Run the following scripts to update server.</p>
 <ul class="list">
 <li>$ <code>python -m SimpleHTTPServer 3000</code></li>
 <li>$ <code>ruby -run -ehttpd ./ -p3000</code></li>
+</ul>
+<h2 id="[setup-lamp][article-setup-lamp]"><a class="header-link" href="#[setup-lamp][article-setup-lamp]"></a><a href="https://help.ubuntu.com/lts/serverguide/lamp-overview.html" title="Set up LAMP">Setup LAMP</a></h2>
+<h2 id="setup-ftp-server"><a class="header-link" href="#setup-ftp-server"></a>Setup FTP Server</h2>
+<ul class="list">
+<li><a href="https://help.ubuntu.com/lts/serverguide/ftp-server.html" title="Set up vsftpd"><code>vsftpd</code></a><ul class="list">
+<li>$ <code>sudo apt install vsftpd</code></li>
+</ul>
+</li>
 </ul>
     </article>
   </body>
