--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <h2 id="blogs-list"><a class="header-link" href="#blogs-list"></a>Blogs List</h2>
 <ul class="list">
 <li><a href="/#">Get Started</a> (Introduction for newbies)<ul class="list">
-<li>[Linux][/#]<ul class="list">
-<li><a href="/linux/setup-server.html">Setup Server</a></li>
+<li><a href="/#">Linux</a><ul class="list">
+<li><a href="/get-started/linux/setup-server.html">Setup Server</a></li>
 </ul>
 </li>
 <li><a href="/#">Tools</a><ul class="list">
