--- a/index.html
+++ b/index.html
@@ -11,31 +11,34 @@
   <body>
     <article class="markdown-body"><h1 id="fisher's-personal-blog"><a class="header-link" href="#fisher's-personal-blog"></a>Fisher&#39;s Personal Blog</h1>
 <!-- > Created by Fisher at 02:53 on 2017-01-11. -->
-<h2 id="blogs-list"><a class="header-link" href="#blogs-list"></a>Blogs List</h2>
+<h2 id="blogs-structure"><a class="header-link" href="#blogs-structure"></a>Blogs Structure</h2>
 <ul class="list">
 <li><a href="/#">Get Started</a> (Introduction for newbies)<ul class="list">
 <li><a href="/#">Linux</a><ul class="list">
-<li><a href="/get-started/linux/setup-server.html">Setup Server</a></li>
+<li><a href="get-started/linux/Setup-Server.html">Setup Server</a></li>
 </ul>
 </li>
 <li><a href="/#">Tools</a><ul class="list">
-<li><a href="/get-started/tools/webstorm.html">Using Webstorm</a></li>
+<li><a href="get-started/tools/WebStorm.html">Using WebStorm</a></li>
 </ul>
 </li>
 </ul>
 </li>
 <li><a href="/#">How To</a> (Guidance and Tips based on topics)<ul class="list">
-<li><a href="how-to/make-plans.html">How to Make Plans</a></li>
+<li><a href="how-to/Make-Plans.html">How to Make Plans</a></li>
 </ul>
 </li>
-<li><a href="/#">Journals</a></li>
-<li><a href="/#">My</a><ul class="list">
-<li><a href="my/learning-tree.html">My Learning Tree</a></li>
-<li><a href="my/books-list.html">My Books List</a></li>
-<li><a href="my/movies-list.html">My Movies List</a></li>
+<li><a href="topics/">Topics</a> (Personal Opinions, Ideas, Feelings)<ul class="list">
+<li><a href="topics/My-Hobbies.html">My Hobbies</a></li>
+<li><a href="topics/Risks-of-Being-Occupied-Always.html">Risks of Being Occupied Always</a></li>
 </ul>
 </li>
-<li><a href="/#">Opinions</a></li>
+<li><a href="my/">My</a><ul class="list">
+<li><a href="my/Learning-Tree.html">My Learning Tree</a></li>
+<li><a href="my/Books-List.html">My Books List</a></li>
+<li><a href="my/Movies-List.html">My Movies List</a></li>
+</ul>
+</li>
 <li><a href="/#">To Do or Not</a> (Shitty ideas)</li>
 </ul>
     </article>
