--- a/my/Movies-List.html
+++ b/my/Movies-List.html
@@ -10,17 +10,18 @@
   </head>
   <body>
     <article class="markdown-body"><h1 id="personal-movies-list"><a class="header-link" href="#personal-movies-list"></a>Personal Movies List</h1>
+<p><em>A list consists of movies watched, to be watched personally, or recommended by others.</em></p>
 <blockquote>
-<p>Created by Fisher at 16:52 on 2017-01-11.</p>
+<p>Created at 16:52 on 2017-01-11.</p>
 </blockquote>
-<p>A list consists of movies watched, to be watched personally, or recommended by others.</p>
+<h2 id="movies-list"><a class="header-link" href="#movies-list"></a>Movies List</h2>
 <ul class="list">
 <li>Good Will Hunting.</li>
 </ul>
 <h2 id="references"><a class="header-link" href="#references"></a>References</h2>
 <ul class="list">
 <li><a href="https://goodmovieslist.com/" title="Website: Good Movies List">Website: Good-Movies-List</a></li>
-<li><a href="http://www.listchallenges.com/reddit-top-250-movies" title="Article: Reddit Top 250 Movies">Article: Reddit Top 250 Movies</a></li>
+<li><a href="http://www.listchallenges.com/reddit-top-250-movies" title="Page: Reddit Top 250 Movies">Article: Reddit Top 250 Movies</a></li>
 </ul>
     </article>
   </body>
