--- a/my/index.html
+++ b/my/index.html
@@ -1,23 +1,1 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-    <title>My ...</title>
-    <link type="text/css" rel="stylesheet" href="../assets/css/github-markdown.css">
-    <link type="text/css" rel="stylesheet" href="../assets/css/pilcrow.css">
-    <link type="text/css" rel="stylesheet" href="../assets/css/hljs-github.min.css"/>
-  </head>
-  <body>
-    <article class="markdown-body"><h1 id="my-..."><a class="header-link" href="#my-..."></a>My ...</h1>
-<p><em>Things that is related to me and may be helpful to you as references.</em></p>
-<blockquote>
-<p>Sunday, 5th March, 2017, 12:02.</p>
-</blockquote>
-<ul class="list">
-<li><a href="Books-List.html">Books List</a></li>
-<li><a href="Movies-List.html">Movies List</a></li>
-</ul>
-    </article>
-  </body>
-</html>
+README.html
