Added get-started/JavaScript, matlab, mongodb, python; Added how-to/Write-CRUD-Positively.

--- a/README.html
+++ b/README.html
@@ -30,6 +30,7 @@
 </li>
 <li><a href="/#">How To</a> (Guidance and Tips based on topics)<ul class="list">
 <li><a href="how-to/Make-Plans.html">How to Make Plans</a></li>
+<li><a href="how-to/Write-CRUD-Positively.html">Write CRUD Positively</a></li>
 </ul>
 </li>
 <li><a href="topics/">Topics</a> (Personal Opinions, Ideas, Feelings)<ul class="list">
