--- a/README.html
+++ b/README.html
@@ -13,6 +13,10 @@
 <!-- > Created by Fisher at 02:53 on 2017-01-11. -->
 <h2 id="blogs-structure"><a class="header-link" href="#blogs-structure"></a>Blogs Structure</h2>
 <ul class="list">
+<li><a href="frontend/">Frontend</a><ul class="list">
+<li><a href="frontend/CRUD-in-Frontend/">CRUD in Front-end</a></li>
+</ul>
+</li>
 <li><a href="get-started/">Get Started</a> (References for newbies)<ul class="list">
 <li><a href="/#">Docker</a><ul class="list">
 <li><a href="get-started/docker/">Docker 101</a></li>
@@ -30,7 +34,7 @@
 </li>
 <li><a href="/#">How To</a> (Guidance and Tips based on topics)<ul class="list">
 <li><a href="how-to/Make-Plans.html">How to Make Plans</a></li>
-<li><a href="how-to/Write-CRUD-Positively.html">Write CRUD Positively</a></li>
+<li><a href="how-to/Write-CRUD-Positively.html">Write CRUD Positively</a><!-- - [Programming](programming/) (Programming Tips) --></li>
 </ul>
 </li>
 <li><a href="topics/">Topics</a> (Personal Opinions, Ideas, Feelings)<ul class="list">
