--- a/README.html
+++ b/README.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-    <title>Fisher&#x27;s Personal Blog</title>
+    <title>Fisher&#x27;s Blog</title>
     <link type="text/css" rel="stylesheet" href="assets/css/github-markdown.css">
     <link type="text/css" rel="stylesheet" href="assets/css/pilcrow.css">
     <link type="text/css" rel="stylesheet" href="assets/css/hljs-github.min.css"/>
   </head>
   <body>
-    <article class="markdown-body"><h1 id="fisher's-personal-blog"><a class="header-link" href="#fisher's-personal-blog"></a>Fisher&#39;s Personal Blog</h1>
-<!-- > Created by Fisher at 02:53 on 2017-01-11. -->
-<h2 id="blogs-structure"><a class="header-link" href="#blogs-structure"></a>Blogs Structure</h2>
+    <article class="markdown-body"><h1 id="fisher's-blog"><a class="header-link" href="#fisher's-blog"></a>Fisher&#39;s Blog</h1>
+<!-- > Created by Fisher at 2:53 AM on 1/11/17. -->
+<h2 id="blog-structure"><a class="header-link" href="#blog-structure"></a>Blog Structure</h2>
 <ul class="list">
 <li><a href="frontend/">Frontend</a><ul class="list">
 <li><a href="frontend/CRUD-in-Frontend/">CRUD in Front-end</a></li>
