--- a/README.html
+++ b/README.html
@@ -17,7 +17,7 @@
 <li><a href="frontend/CRUD-in-Frontend/">CRUD in Front-end</a></li>
 </ul>
 </li>
-<li><a href="get-started/">Get Started</a> (References for newbies)<ul class="list">
+<li><a href="get-started/">Get Started</a> - References for newbies<ul class="list">
 <li><a href="/#">Docker</a><ul class="list">
 <li><a href="get-started/docker/">Docker 101</a></li>
 </ul>
@@ -32,23 +32,16 @@
 </li>
 </ul>
 </li>
-<li><a href="/#">How To</a> (Guidance and Tips based on topics)<ul class="list">
-<li><a href="how-to/Make-Plans.html">How to Make Plans</a></li>
+<li><a href="/#">How To</a> - Guidance and Tips based on topics<ul class="list">
 <li><a href="how-to/Write-CRUD-Positively.html">Write CRUD Positively</a><!-- - [Programming](programming/) (Programming Tips) --></li>
-</ul>
-</li>
-<li><a href="topics/">Topics</a> (Personal Opinions, Ideas, Feelings)<ul class="list">
-<li><a href="topics/My-Hobbies.html">My Hobbies</a></li>
-<li><a href="topics/Risks-of-Being-Occupied-Always.html">Risks of Being Occupied Always</a></li>
 </ul>
 </li>
 <li><a href="my/">My</a><ul class="list">
 <li><a href="my/Learning-Tree.html">My Learning Tree</a></li>
 <li><a href="my/Books-List.html">My Books List</a></li>
-<li><a href="my/Movies-List.html">My Movies List</a></li>
 </ul>
 </li>
-<li><a href="/#">To Do or Not</a> (Shitty ideas)</li>
+<li><a href="/#">To Do or Not</a> - Shitty ideas</li>
 </ul>
     </article>
   </body>
