Remove dead link.

--- a/my/README.html
+++ b/my/README.html
@@ -15,8 +15,8 @@
 <p>Sunday, 5th March, 2017, 12:02.</p>
 </blockquote>
 <ul class="list">
+<li><a href="Learning-Tree.html">Learning Tree</a></li>
 <li><a href="Books-List.html">Books List</a></li>
-<li><a href="Movies-List.html">Movies List</a></li>
 </ul>
     </article>
   </body>
