--- a/topics/index.html
+++ b/topics/index.html
@@ -14,6 +14,9 @@
 <blockquote>
 <p>Technological topics, terminologies, and guidance.</p>
 </blockquote>
+<ul class="list">
+<li><a href="Proxy/">Proxy</a></li>
+</ul>
     </article>
   </body>
 </html>
