Updated get-started/README.md title.

--- a/get-started/README.html
+++ b/get-started/README.html
@@ -3,16 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-    <title>Get Started with something new, funny.</title>
+    <title>Get Started With Programming Languages, Commands, Platform.</title>
     <link type="text/css" rel="stylesheet" href="../assets/css/github-markdown.css">
     <link type="text/css" rel="stylesheet" href="../assets/css/pilcrow.css">
     <link type="text/css" rel="stylesheet" href="../assets/css/hljs-github.min.css"/>
   </head>
   <body>
-    <article class="markdown-body"><h1 id="get-started-with-something-new,-funny."><a class="header-link" href="#get-started-with-something-new,-funny."></a>Get Started with something new, funny.</h1>
-<p><em>Notes for references (if possible :)</em></p>
+    <article class="markdown-body"><h1 id="get-started-with-programming-languages,-commands,-platform."><a class="header-link" href="#get-started-with-programming-languages,-commands,-platform."></a>Get Started With Programming Languages, Commands, Platform.</h1>
 <blockquote>
-<p>6th March, 2017, 21:43.</p>
+<p>Created by Fisher at 9:43 PM on 3/6/17.</p>
 </blockquote>
 <ul class="list">
 <li><a href="/#">Docker</a><ul class="list">
