--- a/README.html
+++ b/README.html
@@ -17,13 +17,14 @@
 <li><a href="frontend/CRUD-in-Frontend/">CRUD in Front-end</a></li>
 </ul>
 </li>
-<li><a href="get-started/">Get Started</a> - References for newbies<ul class="list">
+<li><a href="get-started/">Get Started</a> - Get Started With Programming Languages, Commands, Platform.<ul class="list">
 <li><a href="/#">Docker</a><ul class="list">
 <li><a href="get-started/docker/">Docker 101</a></li>
 </ul>
 </li>
 <li><a href="/#">Linux</a><ul class="list">
 <li><a href="get-started/linux/Setup-Server.html">Setup Server</a></li>
+<li><a href="get-started/linux/SSH.html">SSH</a></li>
 </ul>
 </li>
 <li><a href="/#">Tools</a><ul class="list">
