--- a/get-started/README.html
+++ b/get-started/README.html
@@ -20,6 +20,7 @@
 </li>
 <li><a href="/#">Linux</a><ul class="list">
 <li><a href="linux/Setup-Server.html">Setup Server</a></li>
+<li><a href="linux/SSH.html">SSH</a></li>
 </ul>
 </li>
 <li><a href="/#">Tools</a><ul class="list">
