--- a/README.html
+++ b/README.html
@@ -22,6 +22,11 @@
 <li><a href="get-started/docker/">Docker 101</a></li>
 </ul>
 </li>
+<li>Git<ul class="list">
+<li><a href="get-started/Git/Basic.html">Git Basic</a></li>
+<li><a href="get-started/Git/Using-Git.html">Using Git</a></li>
+</ul>
+</li>
 <li><a href="/#">Linux</a><ul class="list">
 <li><a href="get-started/linux/Setup-Server.html">Setup Server</a></li>
 <li><a href="get-started/linux/SSH.html">SSH</a></li>
