--- a/get-started/README.html
+++ b/get-started/README.html
@@ -18,6 +18,11 @@
 <li><a href="docker/">Docker 101</a></li>
 </ul>
 </li>
+<li>Git<ul class="list">
+<li><a href="Git/Basic.html">Git Basic</a></li>
+<li><a href="Git/Using-Git.html">Using Git</a></li>
+</ul>
+</li>
 <li><a href="/#">Linux</a><ul class="list">
 <li><a href="linux/Setup-Server.html">Setup Server</a></li>
 <li><a href="linux/SSH.html">SSH</a></li>
